show replaced widgets popup section only when data, fix alignment

--- a/src/skin/popup.css
+++ b/src/skin/popup.css
@@ -169,7 +169,7 @@ button {
 }
 
 /* body#main to avoid applying this to options page */
-body#main #blockedResourcesContainer, #special-browser-page, #disabled-site-message {
+body#main #blockedResourcesContainer, #special-browser-page, #disabled-site-message, #replaced-widgets-container {
     flex: 1;
     display: flex;
     flex-direction: column;
